--- a/index.htm
+++ b/index.htm
@@ -18,10 +18,10 @@
 
    <div class="figures">
 
-      <div class="figura tora" value="5"><i class="fas fa-chess-rook"></i></div>
-      <div class="figura ferz" value="2"><i class="fas fa-chess-queen"></i></div>
-      <div class="figura slon" value="3"><i class="fas fa-chess-bishop"></i></div>
-      <div class="figura ot" value="4"><i class="fas fa-chess-knight"></i></div>
+      <div class="figura tora" value="4"><i class="fas fa-chess-rook"></i></div>
+      <div class="figura ferz" value=""><i class="fas fa-chess-queen"></i></div>
+      <div class="figura slon" value=""><i class="fas fa-chess-bishop"></i></div>
+      <div class="figura ot" value=""><i class="fas fa-chess-knight"></i></div>
 
    </div>
 
